--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-kapt'
+    id 'androidx.navigation.safeargs.kotlin'
 }
 
 android {
@@ -35,12 +36,12 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
-    buildFeatures {
+    /*buildFeatures {
         compose true
     }
     composeOptions {
         kotlinCompilerExtensionVersion '1.1.1'
-    }
+    }*/
     viewBinding {
         enabled = true
     }
