--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,12 +36,12 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
-    /*buildFeatures {
+    buildFeatures {
         compose true
     }
     composeOptions {
-        kotlinCompilerExtensionVersion '1.1.1'
-    }*/
+        kotlinCompilerExtensionVersion '1.5.0'
+    }
     viewBinding {
         enabled = true
     }
